--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
 //    signingConfigs {
@@ -31,8 +30,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    apt project(':preference-compiler')
     compile 'com.android.support:support-annotations:24.1.1'
-    compile project(':preference-core')
+    compile 'com.github.qbaowei.Preference:preference-core:beta-0.2.1'
+    provided 'com.github.qbaowei.Preference:preference-compiler:beta-0.2.1'
 }
 
