--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-annotations:24.1.1'
-    compile 'com.github.qbaowei.Preference:preference-core:beta-0.2.1'
-    provided 'com.github.qbaowei.Preference:preference-compiler:beta-0.2.1'
+    compile 'com.android.support:support-annotations:23.1.1'
+    compile 'com.github.qbaowei.Preference:preference-core:1.1.0'
+    provided 'com.github.qbaowei.Preference:preference-compiler:1.1.0'
 }
 
