--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-annotations:23.1.1'
-    compile 'com.github.qbaowei.Preference:preference-core:1.1.0'
-    provided 'com.github.qbaowei.Preference:preference-compiler:1.1.0'
+    compile 'com.github.qbaowei.Preference:preference-core:1.2.0'
+    provided 'com.github.qbaowei.Preference:preference-compiler:1.2.0'
+//    provided project(':preference-compiler')
+//    compile project(':preference-core')
 }
 
